# ai-synth

./: README.md  conda_env.yml  setup.cfg
.github/workflows/: quality_control.yml
aisynth/datasets/dx7/: __init__.py  checksums.tsv  dx7.py  dx7_test.py
src/aisynth/: config.yaml  dataset.py  globals.py  run.py  utils.py
src/aisynth/data/: dataset.py  preprocess.py
src/aisynth/model/: autoencoder.py  blocks.py  convblocks.py  nets.py  quantizer.py  vqvae.py
src/aisynth/train/: losses.py  one_epoch.py  train.py  train_loop.py  trainer.py
src/aisynth/utils/: losses.py
tests/: test_blocks.py  test_dataset.py  test_training.py  test_vqvae.py
utils/: file_management.py  metadata.py
