[metadata]
name= aisynth
description = using VQ-VAE and clustering to create a flexible AI synth
author = Aayush Choudhury
version = 0.0.0
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9

[options]
packages =
    aisynth
install_requires =
    torch==1.12.0
    torchaudio==0.12.0
    pandas==1.4.3
    pytest==7.1.2

python_requires = >=3.9
package_dir =
    =src
zip_safe = no

